# pyfsr-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  configuration.rst  index.rst
src/pyfsr_cli/: cli.py  config.py
src/pyfsr_cli/commands/: alerts.py  api.py  config.py  files.py
src/pyfsr_cli/services/: alerts.py  files.py
src/pyfsr_cli/utils/: auth.py  config.py  custom_decorators.py  output.py
tests/: conftest.py  test_cli.py  test_config.py
tests/commands/: test_alerts.py  test_alerts_command.py  test_config.py  test_config_command.py
tests/integration/: README.md  conftest.py  test_alerts_integration.py
